Working on lists styles for 'teaching' page

--- a/content/organizing/_index.html
+++ b/content/organizing/_index.html
@@ -1,6 +1,6 @@
 ---
 whatPage: organizing
-title: "Organizing:"
+title: "Organizing"
 subtitle: Community events organized in by Keisha S Perkins
 ---
 
