Work on single and teaching section
- Added paginator to subsections in "teaching" section
- Changed "whatPage" marker to "whatSection"
- Added "whatSection" to each archetype
- Added gradients to backgrounds
- Tweaked a few styles on mini menu
- Started on single page template

--- a/content/organizing/_index.html
+++ b/content/organizing/_index.html
@@ -1,5 +1,5 @@
 ---
-whatPage: organizing
+whatSection: organizing
 title: "Organizing"
 subtitle: Community events organized in by Keisha S Perkins
 ---
