Working on terms template and single post template

--- a/content/teaching/upAndRunningWithHUGO/slides/index.html
+++ b/content/teaching/upAndRunningWithHUGO/slides/index.html
@@ -1,6 +1,7 @@
 ---
 title: Up and Running With HUGO
 what: slides
+authors: ["Keisha S Perkins"]
 ---
 
 <p>Hugo is a great static site generator that's super fast and lightweight. This talk demos the steps for getting a site up and running, adding a few posts, and choosing a theme. 
