Improved modularity of styles - Added mixins for color schemes on sections and single pages - Added variables for media queries

--- a/content/contact/_index.html
+++ b/content/contact/_index.html
@@ -4,5 +4,5 @@ subtitle: Keisha S Perkins
 noshare: true
 nodisqus: true
 ---
-<p class="contact-blurb">Drop me an <a href="mailto:keisha@keishasperkins.com" class="social-contact-link">email</a> or find me on the web on <a class="social-contact-link" target="_blank" href="http://codepen.io/keishasperkins">CodePen</a> and
+<p class="contact-blurb">Drop keisha an <a href="mailto:keisha@keishasperkins.com" class="social-contact-link">email</a> or find her on the web on <a class="social-contact-link" target="_blank" href="http://codepen.io/keishasperkins">CodePen</a> and
 <a class="social-contact-link" target="_blank" href="http://github.com/keishasperkins">Github.</a></p>
