--- a/content/teaching/activate2018/notes/ellipseFollowsMouseWithPath.html
+++ b/content/teaching/activate2018/notes/ellipseFollowsMouseWithPath.html
@@ -1,3 +1,10 @@
+---
+noshare: true
+nodisqus: true
+nometa: true
+title: Ellipse Follows the Mouse
+---
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
