--- a/content/teaching/activate2018/notes/movetheCircle.html
+++ b/content/teaching/activate2018/notes/movetheCircle.html
@@ -1,3 +1,10 @@
+---
+noshare: true
+nodisqus: true
+nometa: true
+title: Moving the Circle
+---
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,7 +13,7 @@
 	<script src="https://la-wit.github.io/build-an-infinite-runner/build/js/lib/p5.play.js"></script>
 	<script src="https://la-wit.github.io/build-an-infinite-runner/build/js/lib/p5.sound.js"></script>
 
-	<title>Creat a Blank Canvas</title>
+	<title>Move the Circle</title>
 	<style>
 		canvas{
 			position: absolute;
@@ -19,13 +26,34 @@
 </head>
 <body>
 	<script>
+		var x = 100;
+		var y = 100;
+
 		function setup() {
 			createCanvas(800, 300);
-			background('black');
+			
+			
+
 		}
 
 		function draw() {
+			  if (keyIsDown(LEFT_ARROW)) {
+			    x -= 5;
+			  }
 
+			  if (keyIsDown(RIGHT_ARROW)) {
+			    x += 5;
+			  }
+
+			  if (keyIsDown(UP_ARROW)) {
+			    y -= 5;
+			  }
+
+			  if (keyIsDown(DOWN_ARROW)) {
+			    y += 5;
+			  }
+			  background('black');
+				ellipse(x, y, 50, 50);
 		}
 
 	</script>
