--- a/content/teaching/activate2018/notes/addOurFirstSprite.html
+++ b/content/teaching/activate2018/notes/addOurFirstSprite.html
@@ -1,3 +1,12 @@
+---
+noshare: true
+nodisqus: true
+nometa: true
+title: A Blank Canvas
+nometa: true
+title: Our First Sprite
+---
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,7 +15,7 @@
 	<script src="https://la-wit.github.io/build-an-infinite-runner/build/js/lib/p5.play.js"></script>
 	<script src="https://la-wit.github.io/build-an-infinite-runner/build/js/lib/p5.sound.js"></script>
 
-	<title>Add an Ellipse To Our Canvas</title>
+	<title>Add Our First Sprite</title>
 	<style>
 		canvas{
 			position: absolute;
@@ -19,27 +28,17 @@
 </head>
 <body>
 	<script>
+		var robot;
+
 		function setup() {
+			robot = createSprite(150,150,50,160);
 			createCanvas(800, 300);
-			background('black');
 		}
-
 		function draw() {
-			ellipse(80,50,20,60)
-
+			background('black');
+			drawSprites();
 		}
-
 	</script>
-
-
-
-
-
-
-
-
-
-
 
 </body>
 </html>
