--- a/content/teaching/activate2018/notes/blankCanvas.html
+++ b/content/teaching/activate2018/notes/blankCanvas.html
@@ -1,3 +1,10 @@
+---
+noshare: true
+nodisqus: true
+nometa: true
+title: A Blank Canvas
+---
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,7 +13,7 @@
 	<script src="https://la-wit.github.io/build-an-infinite-runner/build/js/lib/p5.play.js"></script>
 	<script src="https://la-wit.github.io/build-an-infinite-runner/build/js/lib/p5.sound.js"></script>
 
-	<title>Key Press Move</title>
+	<title>Creat a Blank Canvas</title>
 	<style>
 		canvas{
 			position: absolute;
@@ -19,27 +26,13 @@
 </head>
 <body>
 	<script>
-		var robot;
-
 		function setup() {
-			robot = createSprite(150,150,50,160);
-			robot.addAnimation("idle", "images/Idle01.png", "images/Idle09.png");
-			robot.addAnimation("run", "images/Run01.png", "images/Run08.png");
 			createCanvas(800, 300);
-			
-
+			background('black');
 		}
 
 		function draw() {
-			background('black');
-			if (keyIsDown(39)) {
-			    robot.velocity.x = 1;
-			    robot.changeAnimation('run');
-			  } else{
-			  	robot.velocity.x = 0;
-			  	robot.changeAnimation('idle');
-			  }
-			drawSprites();
+
 		}
 
 	</script>
