--- a/content/teaching/activate2018/notes/blankCanvasWithEllipse.html
+++ b/content/teaching/activate2018/notes/blankCanvasWithEllipse.html
@@ -1,3 +1,10 @@
+---
+noshare: true
+nodisqus: true
+nometa: true
+title: A Blank Canvas with an Ellipse
+---
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,7 +13,7 @@
 	<script src="https://la-wit.github.io/build-an-infinite-runner/build/js/lib/p5.play.js"></script>
 	<script src="https://la-wit.github.io/build-an-infinite-runner/build/js/lib/p5.sound.js"></script>
 
-	<title>Key Press Jump</title>
+	<title>Add an Ellipse To Our Canvas</title>
 	<style>
 		canvas{
 			position: absolute;
@@ -19,26 +26,13 @@
 </head>
 <body>
 	<script>
-		var robot;
-
 		function setup() {
-			robot = createSprite(150,150,50,160);
-			robot.addAnimation("idle", "images/idle01.png", "images/idle09.png");
-			robot.addAnimation("jump", "images/jump01.png", "images/jump10.png");
 			createCanvas(800, 300);
-			
-
+			background('black');
 		}
 
 		function draw() {
-			background('black');
-			
-			if(keyIsDown(32)){
-				robot.changeAnimation("jump");
-			} else if(!keyIsDown(32)) {
-				robot.changeAnimation("idle");
-			}
-			drawSprites();
+			ellipse(80,50,20,60)
 
 		}
 
