--- a/content/teaching/activate2018/notes/ellipseFollowsMouseNoPath.html
+++ b/content/teaching/activate2018/notes/ellipseFollowsMouseNoPath.html
@@ -1,3 +1,10 @@
+---
+noshare: true
+nodisqus: true
+nometa: true
+title: The Ellipse Follows the Mouse (No Tail)
+---
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,7 +13,7 @@
 	<script src="https://la-wit.github.io/build-an-infinite-runner/build/js/lib/p5.play.js"></script>
 	<script src="https://la-wit.github.io/build-an-infinite-runner/build/js/lib/p5.sound.js"></script>
 
-	<title>Animate Our First Sprite</title>
+	<title>Remove the Path From Our Ellipse</title>
 	<style>
 		canvas{
 			position: absolute;
@@ -19,19 +26,17 @@
 </head>
 <body>
 	<script>
-		var robot;
-
 		function setup() {
-			robot = createSprite(150,150,50,160);
-			robot.addAnimation("idle", "images/Idle02.png", "images/Idle09.png");
 			createCanvas(800, 300);
 			
-
 		}
 
 		function draw() {
+			
 			background('black');
-			drawSprites();
+			ellipse(mouseX, mouseY, 50, 50);
+
+
 		}
 
 	</script>
