--- a/content/teaching/activate2018/notes/gameExample.html
+++ b/content/teaching/activate2018/notes/gameExample.html
@@ -1,3 +1,10 @@
+---
+noshare: true
+nodisqus: true
+nometa: true
+title: Game Example with Sound
+---
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,7 +13,7 @@
 	<script src="https://la-wit.github.io/build-an-infinite-runner/build/js/lib/p5.play.js"></script>
 	<script src="https://la-wit.github.io/build-an-infinite-runner/build/js/lib/p5.sound.js"></script>
 
-	<title>Infinite Runner Silent</title>
+	<title>Infinite Runner</title>
   <style>
     canvas{
       position: absolute;
@@ -25,6 +32,8 @@ var jumpingAnimation;
 var gameBackground;
 var platformBackground;
 var gameFont;
+var gameMusic;
+var gameOverSound;
 var gameOver = false;
 var platformsGroup;
 var currentPlatformLocation;
@@ -34,7 +43,7 @@ var runnerSpeed = 15;
 var currentBackgroundTilePosition;
 var backgroundTiles;
 var playerScore = 0;
-var jumpSound;
+
 
 function preload() {
   jumpingAnimation = loadAnimation(
@@ -64,7 +73,9 @@ platformBackground = loadImage('https://la-wit.github.io/build-an-infinite-runne
   gameFont = loadFont(
     "https://la-wit.github.io/build-an-infinite-runner/build/fonts/ARCADE_R.TTF"
   );
-
+  gameMusic = loadSound(
+    "https://la-wit.github.io/build-an-infinite-runner/build/sounds/generic-game-loop-4.mp3"
+  );
 }
 
 function setup() {
@@ -79,7 +90,7 @@ function setup() {
   currentPlatformLocation = -width;
   currentBackgroundTilePosition = -width;
   backgroundTiles = new Group();
-
+  gameMusic.play();
 }
 
 function draw() {
@@ -127,7 +138,6 @@ function addNewPlatforms() {
 function solidGround() {
   runner.velocity.y = 0;
   runner.changeAnimation("run");
-
   if (runner.touching.right) {
     runner.velocity.x = 0;
     runner.velocity.y += 30;
@@ -144,7 +154,6 @@ function jumpDetection() {
 }
 
 function touchStarted() {
-
   runner.changeAnimation("jump");
   runner.animation.rewind();
   runner.velocity.y = -jumpPower;
@@ -159,7 +168,8 @@ function touchStarted() {
     runner.velocity.x = runnerSpeed;
     currentPlatformLocation = -width;
     currentBackgroundTilePosition = -width;
-
+    playerScore = 0;
+    gameMusic.play();
   }
 }
 
@@ -197,6 +207,7 @@ function removeOldBackgroundTiles() {
 function fallCheck() {
   if (runner.position.y > height) {
     gameOver = true;
+    gameMusic.stop();
   }
 }
 
@@ -210,8 +221,10 @@ function gameOverText() {
   textSize(90);
   strokeWeight(10);
   text("GAME OVER", camera.position.x, camera.position.y);
+
   textSize(15);
   text("Jump to try again", camera.position.x, camera.position.y + 100);
+
   textSize(20);
   text(
     "You ran " + playerScore + " yards!",
@@ -233,6 +246,7 @@ function newGame() {
     currentPlatformLocation = -width;
     currentBackgroundTilePosition = -width;
     playerScore = 0;
+    gameMusic.play();
   }
 }
 
