--- a/content/teaching/activate2018/notes/gameExampleSilent.html
+++ b/content/teaching/activate2018/notes/gameExampleSilent.html
@@ -1,3 +1,10 @@
+---
+noshare: true
+nodisqus: true
+nometa: true
+title: Game Example
+---
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,7 +13,7 @@
 	<script src="https://la-wit.github.io/build-an-infinite-runner/build/js/lib/p5.play.js"></script>
 	<script src="https://la-wit.github.io/build-an-infinite-runner/build/js/lib/p5.sound.js"></script>
 
-	<title>Infinite Runner</title>
+	<title>Infinite Runner Silent</title>
   <style>
     canvas{
       position: absolute;
@@ -25,8 +32,6 @@ var jumpingAnimation;
 var gameBackground;
 var platformBackground;
 var gameFont;
-var gameMusic;
-var gameOverSound;
 var gameOver = false;
 var platformsGroup;
 var currentPlatformLocation;
@@ -36,7 +41,7 @@ var runnerSpeed = 15;
 var currentBackgroundTilePosition;
 var backgroundTiles;
 var playerScore = 0;
-
+var jumpSound;
 
 function preload() {
   jumpingAnimation = loadAnimation(
@@ -66,9 +71,7 @@ platformBackground = loadImage('https://la-wit.github.io/build-an-infinite-runne
   gameFont = loadFont(
     "https://la-wit.github.io/build-an-infinite-runner/build/fonts/ARCADE_R.TTF"
   );
-  gameMusic = loadSound(
-    "https://la-wit.github.io/build-an-infinite-runner/build/sounds/generic-game-loop-4.mp3"
-  );
+
 }
 
 function setup() {
@@ -83,7 +86,7 @@ function setup() {
   currentPlatformLocation = -width;
   currentBackgroundTilePosition = -width;
   backgroundTiles = new Group();
-  gameMusic.play();
+
 }
 
 function draw() {
@@ -131,6 +134,7 @@ function addNewPlatforms() {
 function solidGround() {
   runner.velocity.y = 0;
   runner.changeAnimation("run");
+
   if (runner.touching.right) {
     runner.velocity.x = 0;
     runner.velocity.y += 30;
@@ -147,6 +151,7 @@ function jumpDetection() {
 }
 
 function touchStarted() {
+
   runner.changeAnimation("jump");
   runner.animation.rewind();
   runner.velocity.y = -jumpPower;
@@ -161,8 +166,7 @@ function touchStarted() {
     runner.velocity.x = runnerSpeed;
     currentPlatformLocation = -width;
     currentBackgroundTilePosition = -width;
-    playerScore = 0;
-    gameMusic.play();
+
   }
 }
 
@@ -200,7 +204,6 @@ function removeOldBackgroundTiles() {
 function fallCheck() {
   if (runner.position.y > height) {
     gameOver = true;
-    gameMusic.stop();
   }
 }
 
@@ -214,10 +217,8 @@ function gameOverText() {
   textSize(90);
   strokeWeight(10);
   text("GAME OVER", camera.position.x, camera.position.y);
-
   textSize(15);
   text("Jump to try again", camera.position.x, camera.position.y + 100);
-
   textSize(20);
   text(
     "You ran " + playerScore + " yards!",
@@ -239,7 +240,6 @@ function newGame() {
     currentPlatformLocation = -width;
     currentBackgroundTilePosition = -width;
     playerScore = 0;
-    gameMusic.play();
   }
 }
 
