--- a/content/teaching/activate2018/notes/keyPressSpriteAction.html
+++ b/content/teaching/activate2018/notes/keyPressSpriteAction.html
@@ -1,12 +1,18 @@
+---
+noshare: true
+nodisqus: true
+nometa: true
+title: Adding a Keypress
+---
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
 	<script src="https://la-wit.github.io/build-an-infinite-runner/build/js/lib/p5.js"></script>
 	<script src="https://la-wit.github.io/build-an-infinite-runner/build/js/lib/p5.play.js"></script>
-	<script src="https://la-wit.github.io/build-an-infinite-runner/build/js/lib/p5.sound.js"></script>
 
-	<title>Add Our First Sprite</title>
+	<title>Key Press Jump</title>
 	<style>
 		canvas{
 			position: absolute;
@@ -19,17 +25,40 @@
 </head>
 <body>
 	<script>
-		var robot;
-
+		console.log("Yo!")
 		function setup() {
 			robot = createSprite(150,150,50,160);
+			robot.addAnimation("idle", "../images/Idle01.png", "../images/Idle09.png");
+			robot.addAnimation("run", "../images/Run01.png", "../images/Run08.png");
 			createCanvas(800, 300);
+			
+
 		}
 		function draw() {
 			background('black');
+			if(keyIsDown(39)){
+				console.log("ddddd")
+				robot.changeAnimation("run");
+				robot.velocity.x = 1;
+			} else if(!keyIsDown(39)) {
+				robot.changeAnimation("idle");
+				robot.velocity.x = 0;
+			}
 			drawSprites();
+
 		}
+
 	</script>
+
+
+
+
+
+
+
+
+
+
 
 </body>
 </html>
