--- a/content/teaching/activate2018/notes/moveOurSprite.html
+++ b/content/teaching/activate2018/notes/moveOurSprite.html
@@ -1,3 +1,10 @@
+---
+noshare: true
+nodisqus: true
+nometa: true
+title: Moving Our Sprite
+---
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,7 +13,7 @@
 	<script src="https://la-wit.github.io/build-an-infinite-runner/build/js/lib/p5.play.js"></script>
 	<script src="https://la-wit.github.io/build-an-infinite-runner/build/js/lib/p5.sound.js"></script>
 
-	<title>Key Press Move 2</title>
+	<title>Key Press Move</title>
 	<style>
 		canvas{
 			position: absolute;
@@ -23,8 +30,8 @@
 
 		function setup() {
 			robot = createSprite(150,150,50,160);
-			robot.addAnimation("idle", "images/Idle01.png", "images/Idle09.png");
-			robot.addAnimation("run", "images/Run01.png", "images/Run08.png");
+			robot.addAnimation("idle", "../images/Idle01.png", "../images/Idle09.png");
+			robot.addAnimation("run", "../images/Run01.png", "../images/Run08.png");
 			createCanvas(800, 300);
 			
 
@@ -35,11 +42,6 @@
 			if (keyIsDown(39)) {
 			    robot.velocity.x = 1;
 			    robot.changeAnimation('run');
-			    robot.mirrorX(1);
-			  } else if (keyIsDown(37)) {
-			    robot.velocity.x = -1;
-			    robot.changeAnimation('run');
-			    robot.mirrorX(-1);
 			  } else{
 			  	robot.velocity.x = 0;
 			  	robot.changeAnimation('idle');
